--- a/index.html
+++ b/index.html
@@ -18,24 +18,22 @@
   --muted: #94a3b8;
 }
 
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 body {
   margin: 0;
   font-family: "Segoe UI", sans-serif;
   background: linear-gradient(120deg, var(--bg-dark), var(--bg-darker));
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   color: var(--text);
 }
 
 .app {
   width: 100%;
-  max-width: 800px;
+  max-width: 900px;
   height: 90vh;
   background: var(--surface);
   border-radius: 22px;
@@ -46,15 +44,48 @@ body {
 }
 
 header {
-  padding: 18px;
+  padding: 16px;
   text-align: center;
   font-size: 1.6rem;
   font-weight: bold;
   color: var(--primary);
-  text-shadow: 0 0 10px var(--primary), 0 0 25px var(--primary);
+  text-shadow: 0 0 10px var(--primary);
   border-bottom: 1px solid var(--border);
 }
 
+/* Tabs */
+.tabs {
+  display: flex;
+  gap: 8px;
+  padding: 10px;
+  background: #020617;
+  border-bottom: 1px solid var(--border);
+  overflow-x: auto;
+}
+
+.tab {
+  padding: 8px 14px;
+  background: #0b1220;
+  border-radius: 14px;
+  cursor: pointer;
+  white-space: nowrap;
+  border: 1px solid var(--border);
+}
+
+.tab.active {
+  background: var(--primary);
+  box-shadow: 0 0 12px rgba(15,162,245,0.7);
+}
+
+.tab input {
+  background: transparent;
+  border: none;
+  color: white;
+  width: 80px;
+  outline: none;
+}
+
+/* Chat */
 #chatbox {
   flex: 1;
   padding: 20px;
@@ -69,29 +100,24 @@ header {
   max-width: 85%;
   padding: 14px 18px;
   border-radius: 18px;
-  line-height: 1.4;
-  word-wrap: break-word;
 }
 
 .user {
   align-self: flex-end;
   background: var(--primary);
-  color: #fff;
-  box-shadow: 0 0 12px rgba(15,162,245,0.6);
 }
 
 .bot {
   align-self: flex-start;
   background: #0b1220;
   border: 1px solid var(--border);
-  color: var(--text);
 }
 
+/* Input */
 .input-area {
-  padding: 16px;
+  padding: 14px;
   display: flex;
-  gap: 12px;
-  background: #020617;
+  gap: 10px;
   border-top: 1px solid var(--border);
 }
 
@@ -104,30 +130,18 @@ textarea {
   background: var(--input-bg);
   border: 1px solid var(--border);
   color: var(--text);
-  font-size: 1rem;
-}
-
-textarea::placeholder {
-  color: var(--muted);
 }
 
 button {
   width: 90px;
-  border: none;
   border-radius: 16px;
+  border: none;
   background: var(--primary);
-  color: #fff;
-  font-size: 1rem;
+  color: white;
   font-weight: bold;
   cursor: pointer;
-  box-shadow: 0 0 12px rgba(15,162,245,0.7);
-  transition: 0.2s;
 }
-
-button:hover {
-  background: var(--primary-hover);
-  box-shadow: 0 0 22px rgba(11,130,197,0.9);
-}
+button:hover { background: var(--primary-hover); }
 </style>
 </head>
 
@@ -136,65 +150,81 @@ button:hover {
 <div class="app">
   <header>Exel AI</header>
 
+  <div class="tabs" id="tabs"></div>
+
   <div id="chatbox"></div>
 
   <div class="input-area">
-    <textarea id="userInput" placeholder="Ask Exel AI anything..."></textarea>
-    <button id="sendBtn">Send</button>
+    <textarea id="input" placeholder="Ask Exel AI..."></textarea>
+    <button onclick="send()">Send</button>
   </div>
 </div>
 
 <script>
-const chatbox = document.getElementById("chatbox");
-const input = document.getElementById("userInput");
-const sendBtn = document.getElementById("sendBtn");
-
 const WORKER_URL = "https://exel-ai-worker.skibidyrizz11.workers.dev";
 
-sendBtn.onclick = sendMessage;
-input.addEventListener("keydown", e => {
-  if (e.key === "Enter" && !e.shiftKey) {
-    e.preventDefault();
-    sendMessage();
-  }
-});
+let chats = [];
+let active = 0;
 
-function addMessage(type, text) {
-  const msg = document.createElement("div");
-  msg.className = "message " + type;
-  msg.textContent = text;
-  chatbox.appendChild(msg);
-  chatbox.scrollTop = chatbox.scrollHeight;
+function newTab(name="AI Tab") {
+  chats.push({ name, messages: [] });
+  active = chats.length - 1;
+  renderTabs();
+  renderChat();
 }
 
-async function sendMessage() {
+function renderTabs() {
+  const tabs = document.getElementById("tabs");
+  tabs.innerHTML = "";
+  chats.forEach((t, i) => {
+    const tab = document.createElement("div");
+    tab.className = "tab" + (i === active ? " active" : "");
+    const input = document.createElement("input");
+    input.value = t.name;
+    input.oninput = e => t.name = e.target.value;
+    tab.onclick = () => { active = i; renderTabs(); renderChat(); };
+    tab.appendChild(input);
+    tabs.appendChild(tab);
+  });
+}
+
+function renderChat() {
+  const box = document.getElementById("chatbox");
+  box.innerHTML = "";
+  chats[active].messages.forEach(m => {
+    const div = document.createElement("div");
+    div.className = "message " + m.role;
+    div.textContent = m.content;
+    box.appendChild(div);
+  });
+  box.scrollTop = box.scrollHeight;
+}
+
+async function send() {
+  const input = document.getElementById("input");
   const text = input.value.trim();
   if (!text) return;
 
-  addMessage("user", text);
+  chats[active].messages.push({ role: "user", content: text });
   input.value = "";
-  addMessage("bot", "Typing… ⏳");
+  renderChat();
 
-  try {
-    const res = await fetch(WORKER_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        messages: [{ role: "user", content: text }]
-      })
-    });
+  chats[active].messages.push({ role: "bot", content: "Typing…" });
+  renderChat();
 
-    const data = await res.json();
+  const res = await fetch(WORKER_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ messages: chats[active].messages.map(m => ({ role: m.role === "bot" ? "assistant" : m.role, content: m.content })) })
+  });
 
-    const reply =
-      data?.choices?.[0]?.message?.content || "[No response]";
-
-    chatbox.lastChild.textContent = reply;
-  } catch (err) {
-    console.error(err);
-    chatbox.lastChild.textContent = "[Error contacting AI]";
-  }
+  const data = await res.json();
+  chats[active].messages.pop();
+  chats[active].messages.push({ role: "bot", content: data.choices[0].message.content });
+  renderChat();
 }
+
+newTab("Main");
 </script>
 
 </body>
